--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -130,6 +130,7 @@
   short_name: pagetable2
   page: labhw/pagetable.html
   portion: 0.25
+  open: 2024-02-29
   due: 2024-03-20
   pre_lab: true
   no_late: true
@@ -139,9 +140,8 @@
     Selected notes on interpreting our testing output below <small>(updated 1 Oct)</small>:
     <ul>
     <li>our tests use <tt>ptbr</tt> to inspect the page table contents and require the page table entries use the format specified in the assignment (including valid bits and the placement of physical page numbers)
-    <li>note that the memory posix_memalign allocates may be initialized differently in our test environment than your environment (posix_memalign is not required to zero out the memory it returns)
-    <li>tests that count allocations are looking to see if all allocations are accounted for by what's in the page table; there are separate tests that the correct page table entries were filled in
-    <li>the expected results of tests of translate() are based on which page table entries map to valid allocations, so if page table entries are not formatted the way the tests expect (because of a problem with page_allocate()), they may "expect" translate() to return all 1's even though there's something in the page table entries
+    <li>the memory posix_memalign allocates may be initialized differently in our test environment than your environment (posix_memalign is not required to zero out the memory it returns)
+    <li>the expected results of tests of translate() are based on which page table entries map to valid allocations, not on what page_allocate calls were made previously, so if your page table is formatted differently than we expect, they make require
     </ul>
   XXXgrade_describe: |
     Selected notes on interpreting our testing output below:
