--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -206,12 +206,10 @@
   week: 9
   title: caches 3
   slides: yes
-  slides_prelim: yes
   reading: "[cache](readings/cache.html)"
   description: |
    *  cache misses and C code (finish)
-   *  write policies
-   *  the TLB (start)
+   *  cache write policies
 
 
 - date: 2024-03-13
@@ -222,13 +220,13 @@
 
 - date: 2024-03-14
   week: 9
-  title: "threads / synchronization 1"
+  title: "(caches 4) / threads / synchronization 1"
   slides: yes
   slides_prelim: yes
   slides_extra: yes
   reading: "[threads](readings/threads.html) §1-2, [pthreads](readings/pthreads.html) §1-2"
   description: |
-    *  the TLB (finish)
+    *  the TLB 
 
     *  creating new threads
     *  thread use examples
