late schedule edits

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -220,10 +220,8 @@
 
 - date: 2024-03-14
   week: 9
-  title: "(caches 4) / threads / synchronization 1"
+  title: "(caches 4) / threads"
   slides: yes
-  slides_prelim: yes
-  slides_extra: yes
   reading: "[threads](readings/threads.html) §1-2, [pthreads](readings/pthreads.html) §1-2"
   description: |
     *  the TLB 
@@ -231,29 +229,26 @@
     *  creating new threads
     *  thread use examples
 
-    *  problem of synchronization
-    *  atomicity, race conditions
-
 - date: 2024-03-15
   week: 9
 
 
 - date: 2024-03-19
   week: 10
-  title: "synchronization 2 / deadlock"
+  title: "synchronization 1 / deadlock"
   reading: "[sync](readings/sync.html), [deadlock](readings/deadlock.html), [consistency](readings/consistency.html) §1"
-  slides_see: 2024-03-14
   slides: yes
   slides_prelim: yes
   slides_extra: yes
   description: |
+   *  problem of synchronization
+   *  atomicity, race conditions
    *  reordering
    *  locks and mutexes
    *  barriers
    *  interlude: reordering
 
-   *  deadlock
-      *  examples of
+   *  examples of deadlock
 
 - date: 2024-03-20
   lab: true
@@ -261,7 +256,7 @@
 
 - date: 2024-03-21
   week: 10
-  title: synchronization 3
+  title: synchronization 2
   reading: "[sync](readings/sync.html), [pthreads](readings/pthreads.html)"
   slides_see: 2024-03-19
   slides_see2: 2024-03-14
