--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -297,12 +297,6 @@
        *  envelope versus contents
     *  connections atop mailbox model
     *  names and addresses
-    *  example: a frame
-       *  layers (link, network, transport)
-    *  IP
-       *  addresses (v4, v6)
-       *  routers
-    *  port numbers and UDP
 
 - date: 2024-03-29
   week: 11
@@ -310,13 +304,18 @@
 
 - date: 2024-04-02
   week: 12
-  title: networking 2 / secure channels 1
-  reading: "[security](readings/sec.html) §1-1.5"
-  slides_see: 2024-03-28
+  title: networking 2
+  reading: "[protocols](readings/protocols.html) §1-6"
   slides: yes
   slides_prelim: yes
   slides_extra: yes
   description: |
+    *  example: a frame
+       *  layers (link, network, transport)
+    *  IP
+       *  addresses (v4, v6)
+       *  routers
+    *  port numbers and UDP
     *  mapping between addresses and names/other addresses:
         *  MAC <-> IP mapping
         *  DNS
@@ -324,45 +323,42 @@
     *  URLs
     *  DHCP
 
-    *  cryptography (start)
-       *  symmetric encryption
-
 - date: 2024-04-03
   lab: true
   week: 12
 
 - date: 2024-04-04
   week: 12
-  title: secure channels 2
+  title: secure channels 1
   reading: "[security](readings/sec.html) §1-3"
-  slides_see: 2024-04-02
+  slides: yes
+  slides_prelim: yes
+  slides_etra: yes
   description: |
-   *  cryptography (con't)
+   *  (if needed) finish networking topics
+
+   *  cryptography
+       *  symmetric encryption
        *  asymmetric encryption
        *  digital signature
    *  replay attacks
-   *  public key infrastructure (start)
 
 - date: 2024-04-05
 
 - date: 2024-04-09
   week: 13
-  reading: "[processors](readings/processors.html) §1-3"
-  title: secure channels 3 / pipelining 1
-  slides_see: 2024-04-02
-  slides: yes
-  slides_prelim: yes
-  slides_extra: yes
+  reading: "[processors](readings/processors.html) §1"
+  title: secure channels 3 / pipelining 0
+  slides_see: 2024-04-04
+  slides_see2: 2024-04-11
   description: |
-   *  public key infrastructure (finish)
+   *  public key infrastructure
    *  extra cryptography bits
         *  cryptographic hashes
         *  key exchange
    *  TLS protocol outline
 
    *  review: single-cycle CPU
-   *  pipelining idea
-   *  pipelining for the CPU (start)
 
 - date: 2024-04-10
   week: 13
@@ -371,10 +367,13 @@
 - date: 2024-04-11
   week: 13
   title: pipelining 2
-  reading: "[processors](readings/processors.html) §2-3"
-  slides_see: 2024-04-09
+  reading: "[processors](readings/processors.html) §1-3"
+  slides: yes
+  slides_prelim: yes
+  slides_extra: yes
   description: |
-    *  pipelining for the CPU (con't)
+    *  pipelining idea
+    *  pipelining for the CPU 
     *  hazards and hazard handlings
        *  stalling / waiting
        *  forwarding and forwarding logic
