--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -267,7 +267,6 @@
 
 - name: networking
   lab: true
-  tentative: true
   page: labhw/networking.html
   submit_file: "*.c"
   due: 2024-04-10
@@ -297,7 +296,8 @@
   short_name: pipeline
   page: labhw/pipeline.html
   feedback: "extracted*,autograder*"
-  missing-if-no-feedback: true
+  missing-if-no-feedback: false
+  tentative: true
   due: 2024-04-19
 
 - name: side channel
