--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -438,6 +438,8 @@
 - date: 2024-04-30
   week: 16
   title: Exam Review
+  description: |
+    * [notes](recordings/20240430-notes.txt)
 
 - date: 2024-05-03
   week: 16
