more info re: final

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -444,4 +444,6 @@
   week: 16
   title: Final Exam
   description: |
-    Scheduled time: 9am-12pm
+    9am-12pm in Chemistry 402
+
+    [reference sheet](files/s2024-reference.pdf)
